# FreeCrime

./: .gitignore  Cargo.toml  README.md  tests.sh
.github/workflows/: linux.yml
reverse/: .gitignore  ACT.md  CMP.md  DAT.md  FON.md  FXT.md  G24.md  GRY.md  MISSION.INI.md  RAT.md  RAW.md  README.md  REP.md  SDT.md  TODO.txt  all_supported_keywords.txt  all_used_keywords.txt  analyze_rep.py  analyze_rep_bits.py  decode_cmp.py  decrypt_fxt.py  display_fon.py  display_map.py  display_raw.py  extract_exe_strings.py  extract_sounds.py  game_mechanic.md  generic.md  investigate_london_water.sh  modify_cmp.py  modify_dat.py  modify_gry.py  powerups.md  sounds.md  sprites.md
src/: README.md  main.rs
src/command/: display.rs  extract.rs  info.rs  mod.rs  overview.rs
src/resources/: mod.rs
src/resources/parsers/: cmp.rs  fon.rs  fxt.rs  gry.rs  ini.rs  mod.rs  raw.rs  sdt.rs
src/resources/types/: font.rs  graphics.rs  map.rs  mod.rs  style.rs  text.rs
testdata/: want_extract_CUT00.FON.txt  want_extract_LEVEL000.SDT.txt  want_extract_LEVEL001.SDT.txt  want_extract_STYLE001.G24.txt  want_extract_STYLE001.GRY.txt  want_info_CUT00.FON.txt  want_info_FRENCH.FXT.txt  want_info_LEVEL000.SDT.txt  want_info_MC.CMP.txt  want_info_MIAMI.CMP.txt  want_info_MISSION.INI.txt  want_info_NYC.CMP.txt  want_info_SANB.CMP.txt  want_info_STYLE001.G24.txt  want_info_STYLE001.GRY.txt  want_info_UK.CMP.txt
